<resources>
    <string name="app_name">LinShare</string>
    <string name="already_have_account">Already have a LinShare account?</string>
    <string name="login">Login</string>
    <string name="wizard_title_one">Linshare</string>
    <string name="wizard_intro_one">Create different workspace for your project</string>
    <string name="wizard_title_two">Linshare</string>
    <string name="wizard_intro_two">Create different workspace for your project</string>
    <string name="wizard_title_three">Linshare</string>
    <string name="wizard_intro_three">Create different workspace for your project</string>
    <string name="linshare_slogan">Store and share your files from anywhere</string>
    <string name="please_enter_credential">Please enter your login information</string>
    <string name="https">https://</string>
    <string name="email">email</string>
    <string name="email_title">Email:</string>
    <string name="first_name_title">First name:</string>
    <string name="last_name_title">Last name:</string>
    <string name="password">password</string>
    <string name="server_not_found">Authentication failed, server not found, please try again</string>
    <string name="credential_error_message">Authentication failed, either the email or the password is invalid, please try again</string>
    <string name="email_is_required">Authentication failed, email is invalid, please try again</string>
    <string name="wrong_url">Server URL is not valid, please try again</string>
    <string name="unknow_error">Unknown error occurred, please try again</string>
    <string name="logout_account">Logout account</string>
    <string name="last_login_title">Last login:</string>
    <string name="available_space_title">Available space:</string>
    <string name="notification">Notification</string>
    <string name="available_space">%s on %s</string>
    <string name="confirm_remove_account_title">Are you sure you want to log out of this account ?</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="logout">Logout</string>
    <string name="upload_and_download_channel_name">Uploads and Downloads</string>
    <string name="upload_and_download_channel_description">Notification for uploading and downloading</string>
    <plurals name="file_in_waiting_list">
        <item quantity="one">File are added to the waiting list.</item>
        <item quantity="other"> %s files are added to the waiting list.</item>
    </plurals>
    <plurals name="notify_count_file_upload">
        <item quantity="one">Uploading file</item>
        <item quantity="other">Uploading %s files</item>
    </plurals>
    <string name="upload">Upload</string>
    <string name="upload_success">Upload completed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_cancelled" translatable="false">Upload Cancelled</string>
    <string name="upload_and_share_success">Upload and Share completed</string>
    <string name="upload_and_share_failed">Upload and Share failed</string>
    <string name="upload_success_but_share_failed">File is not shared successfully</string>
    <plurals name="file_is_shared_with_people">
        <item quantity="one">File is shared with 1 person</item>
        <item quantity="other">File is shared with %d people</item>
    </plurals>
    <string name="can_not_perform_upload">Can not perform uploading. Please try again</string>
    <string name="no_more_space_avalable">You exceeded your storage quota on the LinShare server. Free space and retry your upload.</string>
    <string name="exceed_max_file_size">Uploaded file size exceeds the allowable limit. Please try another file.</string>
    <string name="extrac_info_failed">Unexpected error while trying to access this document through a third party application.</string>
    <string name="executing">Prepare to upload</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_to_my_space">Upload to My Space</string>
    <string name="upload_and_share">Upload and Share</string>
    <string name="unable_to_upload_explanation">To perform upload LinShare application needs to access to your device storage. You can configure access in system preference.</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="permission_refuse">Permission refused</string>
    <string name="my_space">My Space</string>
    <string name="account_details">Account details</string>
    <string name="upload_your_files_here" translatable="false">Upload your files here</string>
    <string name="unable_to_perform_download">To perform download LinShare application needs to access to your device storage. You can configure access in system preference.</string>
    <string name="download_failed">Download failed</string>
    <string name="download_to_device">Download to device</string>
    <string name="delete">Delete</string>
    <string name="download_success">Download completed</string>
    <string name="error_can_not_resume_download">Can not resume download</string>
    <string name="error_insufficient_space">Device has insufficient space. Free space and retry</string>
    <string name="downloaded">Downloaded: %s</string>
    <string name="file_not_found">File is not found to upload.</string>
    <string name="you_are_offline">You\'re Offline</string>
    <string name="internet_not_available">Internet is not available.</string>
    <string name="file_ready_to_upload">File %s is ready to be uploaded.</string>
    <string name="file_added_to_waiting_list">File %s is added to the waiting list.</string>
    <string name="confirm_delete_file">Are you sure to delete \"%s\"?</string>
    <string name="last_modified">Modified %s</string>
    <string name="search_in_my_space">Search in My Space</string>
    <string name="search_no_results">No results found</string>
    <plurals name="search_total_results">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>
    <string name="preparing">Preparing ...</string>
    <string name="prepare_create_upload_request">Preparing file, please wait.</string>
    <string name="quick_share">Quick Share</string>
    <string name="share">Share</string>
    <string name="add_recipients">Add recipients</string>
    <string name="share_failed">File is not shared successfully.</string>
    <string name="share_success">Your file was successfully shared.</string>
    <string name="created">Created %s</string>
    <string name="received">Received</string>
    <string name="received_shares">Received shares</string>
    <string name="unknown_user">Unknown User</string>
    <string name="add_people"><i>Add people</i></string>
    <string name="copy_to_my_space">Copy To My Space</string>
    <string name="copied_in_my_space">File %s has been copied into My Space</string>
    <string name="view">View</string>
    <string name="unable_to_prepare_file_for_upload">Unable to prepare file for upload</string>
    <string name="shared_space">Shared Space</string>
    <string name="do_not_have_any_workgroup">You don\'t have any workgroup yet</string>
    <string name="search_in_shared_space">Search in Shared Space</string>
    <string name="view_your_received_shares" translatable="false">View your received shares</string>
    <string name="do_not_have_any_document">You don\'t have any document yet</string>
    <string name="copy_to_my_space_error_quota_reach">Not enough space in My Space to copy</string>
    <string name="copy_to_my_space_error_file_size_exceed">The file has exceeded size limit.</string>
    <string name="copy_to_my_space_error">An error occurred, can not copy.</string>
    <string name="details">Details</string>
    <string name="members">Members</string>
    <string name="reader_role_name">Reader</string>
    <string name="writer_role_name">Writer</string>
    <string name="contributor_role_name">Contributor</string>
    <string name="admin_role_name">Admin</string>
    <string name="pick_the_destination">Pick the destination</string>
    <string name="choose">Choose</string>
    <string name="add_members">Add Members</string>
    <plurals name="existing_member">
        <item quantity="one">Existing member: %d</item>
        <item quantity="other">Existing members: %d</item>
    </plurals>
    <string name="create_new_workgroup" translatable="false">Create New Workgroup</string>
    <string name="new_workgroup" translatable="false">New Workgroup</string>
    <string name="new_workgroup_original_name" translatable="false">New workgroup</string>
    <string name="create" translatable="false">Create</string>
    <string name="workgroup_name_already_exists" translatable="false">Workgroup name already exists</string>
    <string name="workgroup_name_index" translatable="false">New workgroup(%s)</string>
    <string name="workgroup_name_not_contain_special_char" translatable="false">File name can not contain &#8220;&lt;&#8220;, &#8220;&gt;&#8220;, &#8220;.&#8220;, &#8220;,&#8220;, &#8220;/&#8220;, &#8220;\\&#8220;, &#8220;|&#8220;, &#8220;?&#8220;, &#8220;*&#8220;</string>
    <string name="can_not_connect_network" translatable="false">Cannot connect to the network</string>
    <string name="can_not_refresh_without_network" translatable="false">Cannot refresh while offline</string>
    <string name="can_not_process_without_network" translatable="false">Cannot process while offline</string>
    <string name="can_not_create_shared_space_without_network" translatable="false">Can not create Shared space while offline</string>
    <string name="file_ready_for_download_once_connection_available" translatable="false">The file will be ready for download once connection is available</string>
    <string name="success_deleted" translatable="false">The %s is successfully deleted</string>
    <string name="file" translatable="false">file</string>
    <string name="folder" translatable="false">folder</string>
    <string name="add_member_failed" translatable="false">Add member failed</string>
    <string name="lack_of_device_storage" translatable="false">Unable to upload due to lack of device storage</string>
    <string name="not_access_workgroup_while_offline" translatable="false">Cannot access workgroup while offline</string>
    <string name="not_access_folder_while_offline" translatable="false">Cannot access folder while offline</string>
    <string name="can_not_delete_file_while_offline" translatable="false">Cannot delete file while offline</string>
    <string name="not_view_workgroup_details_while_offline" translatable="false">Cannot view workgroup details while offline</string>
    <string name="activities" translatable="false">Activities</string>
    <string name="audit_log_actor" translatable="false">by %s</string>
    <string name="audit_action_title_addition" translatable="false">Addition:</string>
    <string name="audit_action_title_delete" translatable="false">Delete:</string>
    <string name="audit_action_title_update" translatable="false">Update:</string>
    <string name="audit_action_title_create" translatable="false">Creation:</string>
    <string name="audit_action_title_upload" translatable="false">Upload file:</string>
    <string name="audit_action_title_copy" translatable="false">Copy:</string>
    <string name="audit_action_title_download" translatable="false">Download:</string>
    <string name="audit_action_title_upload_revision" translatable="false">Version uploaded:</string>
    <string name="audit_action_title_delete_revision" translatable="false">Version deleted:</string>
    <string name="order_by_name" translatable="false">Name</string>
    <string name="order_by_modification_date" translatable="false">Modification date</string>
    <string name="order_by_creation_date" translatable="false">Creation date</string>
    <string name="order_by_dialog_title" translatable="false">Order by</string>
</resources>