<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />

        <import type="androidx.databinding.ObservableField" />

        <import type="com.linagora.android.linshare.view.authentication.login.LoginFormState" />

        <variable
            name="loginFormState"
            type="ObservableField&lt;LoginFormState&gt;" />

    </data>

    <ScrollView
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/login_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@id/imgLinshareLogo">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/imgLinshareLogo"
                android:layout_width="@dimen/logo_image_width"
                android:layout_height="@dimen/logo_image_height"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:src="@drawable/linshare_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_app_bar" />

            <TextView
                android:id="@+id/txtLoginSlogan"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:textAlignment="center"
                android:text="@string/linshare_slogan"
                android:textColor="@color/text_with_logo_color"
                style="@style/CenterLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLinshareLogo" />

            <TextView
                android:id="@+id/txtLoginGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guide_margin_top"
                android:maxLines="3"
                android:paddingStart="@dimen/guide_padding_side"
                android:paddingEnd="@dimen/guide_padding_side"
                android:text="@string/please_enter_credential"
                android:textAlignment="center"
                android:textColor="@color/text_with_logo_color"
                android:textSize="@dimen/guide_text_size"
                app:guide="@{loginFormState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLoginSlogan" />

            <EditText
                android:id="@+id/edtLoginUrl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginStart="@dimen/input_margin_side"
                android:layout_marginTop="@dimen/input_margin_top"
                android:layout_marginEnd="@dimen/input_margin_side"
                android:background="@drawable/round_layout"
                android:hint="@string/https"
                android:inputType="textUri"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/input_padding"
                app:inputError="@{loginFormState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLoginGuide" />

            <EditText
                android:id="@+id/edtLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginStart="@dimen/input_margin_side"
                android:layout_marginTop="@dimen/input_gap"
                android:layout_marginEnd="@dimen/input_margin_side"
                android:background="@drawable/round_layout"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/input_padding"
                app:inputError="@{loginFormState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLoginUrl" />

            <EditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginStart="@dimen/input_margin_side"
                android:layout_marginTop="@dimen/input_gap"
                android:layout_marginEnd="@dimen/input_margin_side"
                android:background="@drawable/round_layout"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/input_padding"
                app:inputError="@{loginFormState}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLoginUsername" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/LoginButton"
                android:layout_width="@dimen/login_button_width"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:text="@string/login"
                android:visibility="@{loginFormState.isLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLoginPassword" />

            <ProgressBar
                android:id="@+id/progressLogin"
                android:layout_width="@dimen/login_button_height"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:visibility="@{loginFormState.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtLoginPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>